<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintBottom_toTopOf="@id/title"
                app:layout_constraintLeft_toLeftOf="@id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintBottom_toTopOf="@id/title"
                app:layout_constraintRight_toRightOf="@id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/rating_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite_button_details"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@id/rating_main"
                app:layout_constraintRight_toRightOf="@id/rating_main"
                app:layout_constraintTop_toBottomOf="@id/rating_main"
                app:mfb_color="black"
                app:mfb_type="heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/rating"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/rating_main"
                app:layout_constraintTop_toBottomOf="@+id/rating_main"
                app:layout_constraintTop_toTopOf="@+id/rating_main" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_main"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/description"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintTop_toTopOf="@+id/description" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/director"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/director"
                app:layout_constraintTop_toBottomOf="@+id/director"
                app:layout_constraintTop_toTopOf="@+id/director" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/cast"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/cast"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:layout_constraintTop_toTopOf="@+id/cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/similar_movies_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/similar_movies"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/similar_movies"
                app:layout_constraintTop_toBottomOf="@+id/similar_movies"
                app:layout_constraintTop_toTopOf="@+id/similar_movies" />

            <TextView
                android:id="@+id/review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/reviews"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/review1"
                app:layout_constraintTop_toBottomOf="@+id/review1"
                app:layout_constraintTop_toTopOf="@+id/review1" />

            <TextView
                android:id="@+id/review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similar_movies"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review1"
                app:srcCompat="@drawable/review_divider"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/review2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/author1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="@id/review_title"
                app:layout_constraintTop_toBottomOf="@+id/review_title"
                app:layout_constraintTop_toTopOf="@+id/review_title" />

            <TextView
                android:id="@+id/author2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="@id/review2"
                app:layout_constraintTop_toBottomOf="@+id/review2"
                app:layout_constraintTop_toTopOf="@+id/review2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>